--- a/.css
+++ b/.css
@@ -1,41 +1,104 @@
-.header {
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    margin: 20px;
+.navbar-nav {
+    width: 100%
+    left: 100px
+    padding: 14em;
+    color: azure;
     
 }
 
+.navbar-nav {
+    color: rgb(0, 0, 0);
+    border-bottom: #111;
+}
+
 :root {
-    background-color: rgb(158, 144, 128);
-    color: black;
+    background-color: rgb(166, 161, 156);
+    color: rgb(0, 0, 0);
+    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
 
-.button {
-
-}
 
 .about-me {
     align-items: center;
 }
-
-.body {
-    background-image: url("paper.gif"),
-    url("img_tree.gif");
-    background-color: #cccccc;
-}
-.projects {
-    flex: 1 1 auto;
-    float: left;
-
-}
-
-@media screen and (max-width: 992px) {
-    .header
     
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background: rgb(136, 134, 126);
+    font-family: sans-serif;
+}
+
+.header {
+    background-color: rbg(5, 68, 104);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 225px;
+    height: 100%;
+    padding: 20px 0;
+}
+
+#prog-main {
+    color: rgb(255, 255, 255);
 }
 
 .footer {
-    align-items: flex-end;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: auto;
+    width: 100px;
+    padding-top: 40px;
+    color: #da6161;
+}
+
+.footer-content {
+    top: 0;
+}
+
+.sidebar {
+    height: 100%;
+    width: 150px;
+    position: absolute;
+    left: 0;
+    top: 100px
+    padding-top: 10px;
+    background-color: rgb(177, 177, 179); opacity: 75% ;
+    color: rgb(79, 68, 90);
+
+    }
+    
+.sidebar div {
+    padding: 20px;
+    font-size: 20px;
+    display: block;
+    margin-bottom: 50px;
+    margin-top: 100px;
+    border-color: #111;
+    }
+    
+.body-text {
+    margin-left: 800px;
+    margin-bottom: 50px;
+    font-size: 20px;
+    right: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+
+.p1 {
+    margin-left: 200px;
+    margin-bottom: 300px;
+}
+
+.kitten {
+    opacity: 50%;
+    box-sizing: border-box;
+    float: left;
 }
