--- a/.css
+++ b/.css
@@ -8,11 +8,10 @@
 
 .navbar-nav {
     color: rgb(0, 0, 0);
-    border-bottom: #111;
 }
 
 :root {
-    background-color: rgb(166, 161, 156);
+    background-color: rgb(108, 106, 104);
     color: rgb(0, 0, 0);
     font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
 
@@ -31,7 +30,6 @@
 }
 body {
     background: rgb(136, 134, 126);
-    font-family: sans-serif;
 }
 
 .header {
@@ -45,7 +43,7 @@ body {
 }
 
 #prog-main {
-    color: rgb(255, 255, 255);
+    color: rgb(153, 151, 151);
 }
 
 .footer {
@@ -64,13 +62,12 @@ body {
 }
 
 .sidebar {
-    height: 100%;
+    height: 1250px;
     width: 150px;
     position: absolute;
     left: 0;
-    top: 100px
-    padding-top: 10px;
-    background-color: rgb(177, 177, 179); opacity: 75% ;
+    top: 200px;
+    padding-top: 0px;
     color: rgb(79, 68, 90);
 
     }
@@ -79,9 +76,10 @@ body {
     padding: 20px;
     font-size: 20px;
     display: block;
-    margin-bottom: 50px;
-    margin-top: 100px;
+    margin-bottom: 0px;
+    margin-top: 200px;
     border-color: #111;
+    justify-content: space-between;
     }
     
 .body-text {
@@ -97,8 +95,12 @@ body {
     margin-bottom: 300px;
 }
 
-.kitten {
+.flower {
     opacity: 50%;
-    box-sizing: border-box;
     float: left;
+    animation: normal; animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+@media screen and (max-width: 992px) {
+    .header
 }
