--- a/.css
+++ b/.css
@@ -101,3 +101,6 @@ body {
     animation: normal; animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+@media only screen and (max-width: 600px) {
+
+}
